# StudyFlow-web

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
assets/: CalendarPage-8ztHONVW.js  CalendarPage-BI0Srryz.js  CalendarPage-CIsynsaq.js  CalendarPage-ClcojUdT.js  CalendarPage-CxZL3ZYS.js  CalendarPage-D-ZR_kxB.js  CalendarPage-KXyguu-D.js  CalendarPage-ql74vqSV.js  DashboardPage-BP0jkjuW.js  DashboardPage-CFUHgrCe.js  DashboardPage-Cf44XJZB.js  DashboardPage-CpE3qirA.js  DashboardPage-CrUF7x_3.js  DashboardPage-DRceRvli.js  DashboardPage-D_GNfLZd.js  DashboardPage-lIgcjWbi.js  HomePage-70zMWm8O.js  HomePage-C9d3RQmz.js  HomePage-CGaSy76e.js  HomePage-CTtgNRtF.js  HomePage-DLe45grm.js  HomePage-DwyBp99V.js  HomePage-Qij_vWNw.js  HomePage-w5ecgYKb.js  SubjectsPage-1RYAe_XH.js  SubjectsPage-BOLvZo22.js  SubjectsPage-BiX0NggT.js  SubjectsPage-CRIDgIlw.js  SubjectsPage-DcI3-5js.js  SubjectsPage-ISKIw2_d.js  SubjectsPage-tod-tNAF.js  SubjectsPage-yeyEvJoM.js  TaskForm-B72zMN7T.js  TaskForm-BK21l52Y.js  TaskForm-D8d33qPY.js  TaskForm-DKVDrfUN.js  TaskForm-NHq-JHf6.js  TaskForm-fCKyWVK9.js  TaskForm-mwB2Oxfs.js  TaskForm-ugcYumdK.js  (+43 more)
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AnimatedBackground.tsx  CalendarGrid.tsx  Countdown.tsx  PomodoroTimer.tsx  StatsCard.tsx  SubjectCard.tsx  SubjectForm.tsx  TaskCard.tsx  TaskForm.tsx
src/hooks/: useCalendar.ts  useSubjects.ts  useTasks.ts  useTheme.ts  useTimer.ts
src/licensing/: FeatureGate.tsx  config.ts  (+4 more)
(+8 files in other folders)
